testing/src/java7srclisting/errors/ErrorV14.java
package java7srclisting.errors;

import com.sun.org.glassfish.gmbal.ManagedData;

class ErrorV14 {

}

@ManagedData
interface ErrorV14_2 {

}
